# rules_foreign_cc

examples/make_with_bazel_transitive_final_link/: BUILD.bazel
examples/make_with_bazel_transitive_final_link/simple_lib/: Makefile
examples/make_with_bazel_transitive_final_link/simple_lib/src/: simple.c
foreign_cc/: make.bzl
foreign_cc/private/: configure_script.bzl  framework.bzl  make_env_vars.bzl  make_script.bzl
