load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")

cc_library(
    name = "built_with_bazel",
    srcs = ["builtWithBazel.c"],
    hdrs = ["builtWithBazel.h"],
    linkstatic=True,
    includes = ["."],
)

make(
    name = "simple",
    lib_source = "//make_with_bazel_transitive_final_link/simple_lib:simple_srcs",
    targets = [
        "simple",
    ],
    out_binaries = [
        "simple"
    ],
    linkdeps=True,
    deps = [":built_with_bazel"],
)
